[gd_scene load_steps=3 format=3 uid="uid://cxg4ixvdjss3i"]

[ext_resource type="Script" path="res://gameplay/test_gameplay/kill_counter.gd" id="1_tipcn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ti528"]
radius = 500.0

[node name="KillCounter" type="Node3D"]
script = ExtResource("1_tipcn")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_ti528")

[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
